--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -10,7 +10,7 @@
     <p>{{description}}</p>
     <p>Price: ${{price}}</p>
     <p>Category: {{category}} </p>
-  <button class="formBtnProducts"><a href="/products/{{id}}">ver Detalles</a></button>
+  <button class="btnMio"><a class="btnMio" href="/products/{{id}}">ver Detalles</a></button>
     </div>
     
 {{/each}}
