--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -1,41 +1,30 @@
-<h1>Admin Panel</h1>
+<p> Bienvenido al panel de administración de usuarios</p>
+<h1> Rol: {{role}} </h1>
+
 
 <h2>User List</h2>
 <ul class="cartUser">
-    {{#each usersJSON}}
+    {{#each users}}
     <li>
         Name: {{this.first_name}} {{this.last_name}} | <br>
         Email: {{this.email}} | <br>
         Role: {{this.role}}
         
-        <!-- Formulario de Edición -->
-        <form action="/api/user/admin/users/{{this._id}}/edit" method="POST">
-            <button type="submit">Edit</button>
-        </form>
-        
-        <!-- Formulario de Eliminación -->
-        <form class="delete-user-form" data-id="{{this._id}}" onsubmit="return confirm('Are you sure you want to delete this user?');">
-            <button type="submit">Delete</button>
-        </form>
+        <button onclick="changeRole('{{this._id}}')"> Change Role </button>
+        <button onclick="deleteUser('{{this._id}}')"> Delete </button>
     </li>
     {{/each}}
 </ul>
+<div class="divContainerPage">
+{{#if hasPrevPage}}
 
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-    document.querySelectorAll('.delete-user-form').forEach(form => {
-        form.addEventListener('submit', async function(event) {
-            event.preventDefault();
-            const userId = form.getAttribute('data-id');
-            const response = await fetch(`/api/user/admin/users/${userId}`, {
-                method: 'DELETE'
-            });
-            if (response.ok) {
-                window.location.href = '/admin/users';
-            } else {
-                alert('Error al eliminar el usuario');
-            }
-        });
-    });
-});
-</script>
+<a target="_blank" href="/admin?page={{prevPage}}&limit={{limit}}"> Anterior </a>
+{{/if}}
+{{#if hasNextPage}}
+<a target="_blank" href="/admin?page={{nextPage}}&limit={{limit}}"> Siguiente </a>
+{{/if}}
+<p> Pagina {{currentPage}} de {{totalPages}} </p>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"> </script> 
+<script src="/js/admin.js"></script>
+
