--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,3 +1,9 @@
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
@@ -11,6 +17,7 @@ body {
 h1 {
     color: rgb(237, 161, 161); 
     text-align: center;
+    text-decoration: underline 2px salmon;
 }
 
 /*HEADER*/
@@ -95,14 +102,16 @@ nav ul li a:hover {
 .imgHome {
   max-width: 100%;
   height: auto;
-  margin-left: 20%;
-  border-radius: 15px;
+  padding: 30px;
+  border-radius: 150px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 10%;
 }
 
 .Init {
   display: inline-block;
   margin-top: 20px;
+  margin-bottom: 10px;
   padding: 10px 20px;
   background-color: #de8fef;
   color: #fff;
@@ -120,9 +129,12 @@ nav ul li a:hover {
 h2 {
   color: #555;
   text-align: center;
-  margin-top: 20px;
+  margin: 20px;
+  text-decoration: underline 2px blueviolet;
 }
-
+h3{
+  margin-left: 100px;
+}
 .container-login {
   display: flex;
   justify-content: center;
@@ -141,7 +153,9 @@ h2 {
 form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+ 
+  margin: 30px;
+  padding: 30px;
 }
 
 label {
@@ -163,6 +177,7 @@ button[type="submit"] {
   color: #fff;
   border: none;
   cursor: pointer;
+  margin-top: 20px;
 }
 
 button[type="submit"]:hover {
@@ -487,7 +502,7 @@ h3 {
 
 .product-details {
   max-width: 600px;
-  margin: 20px auto;
+  margin: 20px;
   padding: 20px;
   border: 1px solid #ff66b2; /* Color rosa */
   border-radius: 10px;
@@ -539,7 +554,15 @@ h3 {
 }
 
 .btnDetail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 20px;
+}
+#addToCartForm{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 /*ADMIN*/
 
@@ -592,3 +615,148 @@ h3 {
   background-color: #c82333;
 }
 /*UPLOADS DOCUMENTS*/
+
+/* Media Queries */
+@media (max-width: 1200px) {
+  .containerCard,
+  .card {
+    width: 45%;
+  }
+}
+
+@media (max-width: 992px) {
+  .containerCard,
+  .card {
+    width: 45%;
+  }
+
+  .containerCard img,
+  .card img {
+    height: 300px;
+  }
+
+  .containerHome {
+    margin-top: 50px;
+  }
+
+  .container-checkout {
+    margin: 5% 15%;
+  }
+
+  .container-loginForm,
+  .formRegister,
+  .form-container {
+    width: 70%;
+  }
+}
+
+@media (max-width: 768px) {
+  nav ul li {
+    display: block;
+    margin: 10px 0;
+  }
+
+  .containerCard,
+  .card {
+    width: 90%;
+  }
+
+  .containerCard img,
+  .card img {
+    height: 250px;
+  }
+
+  .containerHome {
+    margin-top: 30px;
+  }
+
+  .container-checkout {
+    margin: 5% 5%;
+  }
+
+  .container-loginForm,
+  .formRegister,
+  .form-container {
+    width: 90%;
+  }
+
+  #chatBox {
+    width: calc(90% - 50px);
+  }
+}
+
+@media (max-width: 576px) {
+  
+  header {
+    display: flex;
+    flex-direction:column ;
+    align-items: center;
+  }
+  .imgHome {
+    max-width: 100%;
+    height: auto;
+    padding: 30px;
+    border-radius: 50px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    
+  }
+  .containerHome {
+    margin-top: 20px;
+  }
+
+  .container-checkout {
+    margin: 5%;
+  }
+
+  .container-loginForm,
+  .formRegister,
+  .form-container {
+    width: 100%;
+  }
+
+  .containerCard,
+  .card {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+  }
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+  .containerCard img,
+  .card img {
+    height: 350px;
+    width: 150px;
+    margin-left: 50px;
+    border: #8b4788 2px double;
+
+  }
+  .card-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+  }
+  .cartUser{
+    flex-direction: column;
+  }
+  p{
+    margin: 20px;
+  }
+  h3{
+    margin:30px;
+  }
+  #containerProducts .card{
+    display: flex;
+    flex-direction: column;
+    align-items: center
+  }
+  .form-container{
+    margin: 20px;
+  }
+}
