--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -100,12 +100,10 @@ nav ul li a:hover {
 }
 
 .imgHome {
-  max-width: 100%;
+  width: 100%;
   height: auto;
   padding: 30px;
-  border-radius: 150px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 10%;
+ border-radius: 20%;
 }
 
 .Init {
@@ -693,11 +691,10 @@ h3 {
     align-items: center;
   }
   .imgHome {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     padding: 30px;
-    border-radius: 50px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
     
   }
   .containerHome {
